--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,6 +13,21 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_DATABASE: 'playdata'
+          MYSQL_USER: 'bigdata'
+          MYSQL_PASSWORD: 'bigdata'
+        ports:
+        - 3306:3306
+        options: --health-cmd="mysqladmin ping" 
+                 --health-interval=10s 
+                 --health-timeout=5s 
+                 --health-retries=3
 
     steps:
     - uses: actions/checkout@v3
@@ -22,5 +37,9 @@ jobs:
         java-version: '11'
         distribution: 'temurin'
         cache: maven
+    - name: Verify MySQL connection from host
+      run: |
+          mysql --host 127.0.0.1 --port 3306 -uroot -e "SHOW DATABASES
+          
     - name: Build with Maven
       run: mvn -B package --file pom.xml
