--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,8 +5,12 @@ name: Java CI with Maven
 
 on:
   push:
+    paths:
+      - 'final-project/**'
 
   pull_request:
+      paths:
+      - 'final-project/**'
  
 
 jobs:
