--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -6,11 +6,11 @@ name: Java CI with Maven
 on:
   push:
     paths:
-      - 'final-project/**'
+      - 'FPBoot/**'
 
   pull_request:
       paths:
-      - 'final-project/**'
+      - 'FPBoot/**'
  
 
 jobs:
