--- a/FPBoot/src/main/resources/application.yml
+++ b/FPBoot/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
       suffix: .jsp
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    password: 1234
+    password: bigdata
     url: jdbc:mysql://localhost/playdata?characterEncoding=UTF-8
     username: bigdata
   jpa:
