--- a/.github/workflows/ECR-deploy.yml
+++ b/.github/workflows/ECR-deploy.yml
@@ -28,7 +28,7 @@ jobs:
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-northeast
+        aws-region: ap-south-1
 
     - name: Login to Amazon ECR
       id: login-ecr
@@ -41,6 +41,4 @@ jobs:
         IMAGE_TAG: nodejs_demo_image
       run: |
         docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG 
-        
-         
+        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
