--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,5 +45,5 @@ jobs:
       run: |
         mysql --host 127.0.0.1 --port 3306 -uroot -e "SHOW DATABASES"
     - name: Build with Maven
-      run: mvn -B package --f ./FPBoot/pom.xml
+      run: mvn -B package --f ./FPBoot-deploy/pom.xml
 
