--- a/argopush/spring.yaml
+++ b/argopush/spring.yaml
@@ -17,3 +17,5 @@ spec:
         image: 421576594835.dkr.ecr.ap-northeast-2.amazonaws.com/docker-spring
         ports:
         - containerPort: 80      
+      imagePullSecrets:
+      - name: ap-northeast-2-ecr-registry
