--- a/argopush/spring.yaml
+++ b/argopush/spring.yaml
@@ -12,8 +12,8 @@ spec:
       labels:
         app: spring-boot
     spec:
-      imagePullSecrets:
-      - name: ap-northeast-2-ecr-registry
+#      imagePullSecrets:
+#      - name: ap-northeast-2-ecr-registry
       containers:
       - name: spring
         image: 421576594835.dkr.ecr.ap-northeast-2.amazonaws.com/docker-spring:spring_image
