--- a/.github/workflows/ECR-deploy.yml
+++ b/.github/workflows/ECR-deploy.yml
@@ -55,5 +55,4 @@ jobs:
         ECR_REPOSITORY: docker-spring
         IMAGE_TAG: spring_image
       run: |
-        docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6 -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+        docker buildx build --platform linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6 -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --push .
