--- a/.github/workflows/ECR-deploy.yml
+++ b/.github/workflows/ECR-deploy.yml
@@ -22,6 +22,12 @@ jobs:
 
     - name: Check out code
       uses: actions/checkout@v3
+      
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+      
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
     
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -49,5 +55,4 @@ jobs:
         ECR_REPOSITORY: docker-spring
         IMAGE_TAG: spring_image
       run: |
-        docker build --platform linux/arm64 -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-        docker push $REGISTRY/$REGISTRY_ALIAS/$REPOSITORY:$IMAGE_TAG
+        docker buildx build --platform linux/arm64 -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --push.
