--- a/argopush/spring.yaml
+++ b/argopush/spring.yaml
@@ -13,7 +13,7 @@ spec:
         app: spring-boot
     spec:
       imagePullSecrets:
-      - name: secret-registry
+      - name: ap-northeast-2-ecr-registry
       
       containers:
       - name: spring
