--- a/argopush/spring.yaml
+++ b/argopush/spring.yaml
@@ -18,4 +18,4 @@ spec:
         ports:
         - containerPort: 80
       imagePullSecrets:
-      - name: ap-northeast-2-ecr-registry
+      - name: regcred
