--- a/argopush/spring.yaml
+++ b/argopush/spring.yaml
@@ -3,7 +3,17 @@ kind: Deployment
 metadata:
   name: spring
 spec:
-  containers:
-  - image: 421576594835.dkr.ecr.ap-northeast-2.amazonaws.com/docker-spring:spring_image
-  imagePullSecrets:
-  - name: ap-northeast-2-ecr-registry
+  replicas: 2
+  selector:
+    matchLabels:
+      app: spring
+  template:
+    metadata:
+      labels:
+        app: spring
+    spec:
+      containers:
+        - name: spring
+          image: 421576594835.dkr.ecr.ap-northeast-2.amazonaws.com/docker-spring:spring_image
+      imagePullSecrets:
+        - name: ap-northeast-2-ecr-registry
