--- a/argopush/spring.yaml
+++ b/argopush/spring.yaml
@@ -15,5 +15,6 @@ spec:
       containers:
       - name: spring
         image: 421576594835.dkr.ecr.ap-northeast-2.amazonaws.com/docker-spring:spring_image
+        imagePullPolicy: Always
       imagePullSecrets:
       - name: regcred
