--- a/argopush/spring.yaml
+++ b/argopush/spring.yaml
@@ -15,6 +15,9 @@ spec:
       containers:
       - name: spring
         image: 421576594835.dkr.ecr.ap-northeast-2.amazonaws.com/docker-spring:spring_image
+        ports:
+        - containerPort: 8080
         imagePullPolicy: Always
       imagePullSecrets:
       - name: regcred
+      
