--- a/argopush/spring-service.yaml
+++ b/argopush/spring-service.yaml
@@ -3,10 +3,11 @@ kind: Service
 metadata:
   name: spring-service
 spec:
+  selector:
+    app: spring
   type: NodePort
   ports:
     - port: 80
       protocol: TCP
       targetPort: 8080
-  selector:
-    app: spring
+      nodePort: 32000
