--- a/argopush/spring.yaml
+++ b/argopush/spring.yaml
@@ -17,7 +17,7 @@ spec:
         image: 421576594835.dkr.ecr.ap-northeast-2.amazonaws.com/docker-spring:spring_image
         ports:
         - containerPort: 8080
-        imagePullPolicy: IfNotPresent
+#        imagePullPolicy: IfNotPresent
       imagePullSecrets:
       - name: regcred
       
