--- a/FPBoot-deploy/pom.xml
+++ b/FPBoot-deploy/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>gongo</groupId>
 	<artifactId>gongo</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 	<name>gongo</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
