--- a/argopush/spring-service.yaml
+++ b/argopush/spring-service.yaml
@@ -5,13 +5,8 @@ metadata:
 spec:
   selector:
     app: spring
-  type: NodePort
   ports:
-    - port: 80
-      protocol: TCP
-      targetPort: 8080
-      nodePort: 32000
-    - name: SQL
+    - name: sql
       protocol: TCP
       port: 3306
       targetPort: 3306
