--- a/argopush/spring-service.yaml
+++ b/argopush/spring-service.yaml
@@ -6,8 +6,8 @@ metadata:
 spec:
   selector:
     app: spring
-  type: NodePort  
   ports:
-    - port: 3306
-      targetPort: 3306
-      nodePort: 3306
+  - name : mysql
+    protocol: "TCP"
+    port: 3306
+    targetPort: 3306
