--- a/argopush/mysql.yaml
+++ b/argopush/mysql.yaml
@@ -4,6 +4,6 @@ metadata:
   name: mysql
 spec:
   type: ExternalName
-  externalName: 421576594835.dkr.ecr.ap-northeast-2.amazonaws.com/docker-spring:spring_image
+  externalName: database-1.cpjbyuaaolfs.ap-northeast-2.rds.amazonaws.com
   
 
