--- a/argopush/mysql.yaml
+++ b/argopush/mysql.yaml
@@ -4,4 +4,4 @@ metadata:
   name: mysql
 spec:
   type: ExternalName
-  externalName: database-1.cpjbyuaaolfs.ap-northeast-2.rds.amazonaws.com
+  externalName: database-1.cpjbyuaaolfs.ap-northeast-2.rds.amazonaws.com:3306
