--- a/argopush/mysql.yaml
+++ b/argopush/mysql.yaml
@@ -4,4 +4,9 @@ metadata:
   name: mysql
 spec:
   type: ExternalName
-  externalName: database-1.cpjbyuaaolfs.ap-northeast-2.rds.amazonaws.com:3306
+  externalName: 'database-1.cpjbyuaaolfs.ap-northeast-2.rds.amazonaws.com:3306'
+  ports:
+  - nodePort: 0
+    port: 3306
+    targetPort: 3306
+    protocol: TCP
