--- a/argopush/mysql.yaml
+++ b/argopush/mysql.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   type: ExternalName
   externalName: 'database-1.cpjbyuaaolfs.ap-northeast-2.rds.amazonaws.com:3306'
-  ports:
+#   ports:
 #   - nodePort: 0
 #     port: 3306
 #     targetPort: 3306
