--- a/argopush/mysql.yaml
+++ b/argopush/mysql.yaml
@@ -5,3 +5,8 @@ metadata:
 spec:
   type: ExternalName
   externalName: database-1.cpjbyuaaolfs.ap-northeast-2.rds.amazonaws.com
+  ports:
+  - port: 3306
+    protocl: TCP
+    targetPort: 3306
+  sessionAffinity: None
