--- a/argopush/mysql.yaml
+++ b/argopush/mysql.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: mysql
+  name: database-1.cpjbyuaaolfs.ap-northeast-2.rds.amazonaws.com
 spec:
   type: ClusterIP
   ports:
@@ -14,7 +14,7 @@ spec:
 apiVersion: v1
 kind: Endpoints
 metadata:
- name: mysql
+ name: database-1.cpjbyuaaolfs.ap-northeast-2.rds.amazonaws.com
 subsets:
  - addresses:
      - ip: 10.0.32.192
