--- a/argopush/mysql.yaml
+++ b/argopush/mysql.yaml
@@ -1,22 +1,7 @@
-apiVersion: v1
 kind: Service
-metadata:
-  name: database-1.cpjbyuaaolfs.ap-northeast-2.rds.amazonaws.com
-spec:
-  type: ClusterIP
-  ports:
-  - port: 3306
-    targetPort: 3306
-
-
----
-
 apiVersion: v1
-kind: Endpoints
 metadata:
  name: database-1.cpjbyuaaolfs.ap-northeast-2.rds.amazonaws.com
-subsets:
- - addresses:
-     - ip: 10.0.32.192
-   ports:
-     - port: 3306
+spec:
+ type: ExternalName
+ externalName: database-1.cpjbyuaaolfs.ap-northeast-2.rds.amazonaws.com
