--- a/argopush/mysql.yaml
+++ b/argopush/mysql.yaml
@@ -1,7 +1,7 @@
 kind: Service
 apiVersion: v1
 metadata:
- name: database-1.cpjbyuaaolfs.ap-northeast-2.rds.amazonaws.com
+ name: mysql-rds
 spec:
  type: ExternalName
  externalName: database-1.cpjbyuaaolfs.ap-northeast-2.rds.amazonaws.com
