--- a/argopush/mysql.yaml
+++ b/argopush/mysql.yaml
@@ -1,3 +1,12 @@
+kind: Service
+apiVersion: v1
+metadata:
+ name: mysqlrds
+spec:
+ ports:
+ - port: 3306
+   targetPort: 3306
+---
 kind: Endpoints
 apiVersion: v1
 metadata:
