--- a/FPBoot-deploy/src/main/resources/application.yml
+++ b/FPBoot-deploy/src/main/resources/application.yml
@@ -6,15 +6,15 @@ server:
 spring:
   datasource:
     primary:
-      endpoint: mysqlrds
+      endpoint: rdsendpoint
       driver-class-name: com.mysql.cj.jdbc.Driver
-      rds-url: jdbc:mysql://mysqlrds/final_project?characterEncoding=UTF-8
+      rds-url: jdbc:mysql://rdsendpoint:3306/final_project?characterEncoding=UTF-8
       rds-username: bigdata
       rds-password: bigdatabigdata
   
     secondary:
       driver-class-name: com.mysql.cj.jdbc.Driver
-      url: jdbc:mysql://localhost/final_project?characterEncoding=UTF-8
+      url: jdbc:mysql://localhost:3306/final_project?characterEncoding=UTF-8
       username: bigdata
       password: bigdata
 
