--- a/argopush/test.yaml
+++ b/argopush/test.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata: 
-  name: externalname1
+  name: google
 spec:
   type: ExternalName 
   externalName: google.com
