--- a/argopush/rds.yaml
+++ b/argopush/rds.yaml
@@ -1,7 +1,19 @@
-apiVersion: v1
 kind: Service
-metadata: 
-  name: mysqlrds
+apiVersion: v1
+metadata:
+  name: rdsendpoint
 spec:
-  type: ExternalName 
-  externalName: 10.0.32.192
+  ports:
+  - port: 3306
+  targetPort: 3306
+---
+
+kind: Endpoints
+apiVersion: v1
+metadata:
+  name: rdsendpoint
+subsets:
+  - addresses:
+    - ip: 10.0.32.192
+    ports:
+    - port: 3306
