--- a/argopush/rds.yaml
+++ b/argopush/rds.yaml
@@ -1,15 +1,15 @@
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
   name: rdsendpoint
 spec:
+  type: ClusterIP
   ports:
-  - port: 3307
-  targetPort: 3306
+  - port: 3306
+    targetPort: 3306
 ---
-
-kind: Endpoints
 apiVersion: v1
+kind: Endpoints
 metadata:
   name: rdsendpoint
 subsets:
