--- a/argopush/test.yaml
+++ b/argopush/test.yaml
@@ -1,11 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata: 
-  name: google
+  name: goo
 spec:
-  ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
-  type: ExternalName
+  type: ExternalName 
   externalName: google.com
