--- a/.github/workflows/ECR-deploy.yml
+++ b/.github/workflows/ECR-deploy.yml
@@ -43,6 +43,10 @@ jobs:
       
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
+      with:
+        context: ./docker/spring
+        file: ./docker/spring/Dockerfile
+
     
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
