--- a/.github/workflows/ECR-deploy.yml
+++ b/.github/workflows/ECR-deploy.yml
@@ -45,7 +45,7 @@ jobs:
       uses: docker/setup-buildx-action@v2
       with:
         context: ./docker/spring
-        file: ./docker/spring/Dockerfile
+        file: Dockerfile
 
     
     - name: Configure AWS credentials
