--- a/.github/workflows/ECR-deploy.yml
+++ b/.github/workflows/ECR-deploy.yml
@@ -43,10 +43,6 @@ jobs:
       
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
-      with:
-        context: ./docker/spring
-        file: Dockerfile
-
     
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
@@ -74,4 +70,4 @@ jobs:
         ECR_REPOSITORY: docker-spring
         IMAGE_TAG: spring_image
       run: |
-        docker buildx build --platform linux/arm64 -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --push --no-cache .
+        docker buildx build --file ./docker/spring/Dockerfile --platform linux/arm64 -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --push --no-cache .
