--- a/.github/workflows/ECR-deploy-python.yml
+++ b/.github/workflows/ECR-deploy-python.yml
@@ -4,11 +4,11 @@ name: Deploy to Amazon ECR - Python
 on:
   push:
     paths:
-      - 'FPBoot-deploy/**'
+      - 'Python-delploy/**'
 
   pull_request:
       paths:
-      - 'FPBoot-deploy/**'
+      - 'FPBoot-delploy/**'
  
 
 jobs:
@@ -17,8 +17,29 @@ jobs:
     
     name: Build Image
     runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        python-version: ["3.8"]
+        
+    
    
     steps:
+    
+    - uses: actions/checkout@v3
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v4
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        python -m pip install pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+        
+    - name: Test with pytest
+      run: |
+        pytest
 
     - name: Check out code
       uses: actions/checkout@v3
@@ -44,7 +65,7 @@ jobs:
     - name: Build, tag, and push image to Amazon ECR
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-        ECR_REPOSITORY: docker-spring
-        IMAGE_TAG: spring_image
+        ECR_REPOSITORY: docker-python
+        IMAGE_TAG: python_image
       run: |
         docker buildx build --file ./docker/spring/Dockerfile --platform linux/arm64 -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --push --no-cache .
