--- a/.github/workflows/ECR-deploy-python.yml
+++ b/.github/workflows/ECR-deploy-python.yml
@@ -35,7 +35,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install pytest
-        python -m pip install -r Python-deploy/requirements.txt;
+        python -m pip install -r ./Python-deploy/requirements.txt;
     - name: Test with pytest
       run: |
         pytest
