--- a/.github/workflows/ECR-deploy-python.yml
+++ b/.github/workflows/ECR-deploy-python.yml
@@ -33,12 +33,12 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
+        cd ./Python-deploy
         python -m pip install --upgrade pip
         python -m pip install pytest
-        pip install -r ./Python-deploy/requirements.txt
+        pip install -r requirements.txt
     - name: Test with pytest
       run: |
-        cd ./Python-deploy
         pytest
 
 #     - name: Check out code
