--- a/.github/workflows/ECR-deploy-python.yml
+++ b/.github/workflows/ECR-deploy-python.yml
@@ -33,10 +33,9 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        cd ./Python-deploy
         python -m pip install --upgrade pip
         python -m pip install pytest
-        pip install -r requirements.txt
+        pip install -r ./Python-deploy/requirements.txt
     - name: Test with pytest
       run: |
         pytest
