--- a/.github/workflows/ECR-deploy-python.yml
+++ b/.github/workflows/ECR-deploy-python.yml
@@ -33,8 +33,8 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        python -m pip install pytest
+        python pip install --upgrade pip
+        python pip install pytest
         pip install -r ./Python-deploy/requirements.txt
     - name: Test with pytest
       run: |
