--- a/.github/workflows/ECR-deploy-python.yml
+++ b/.github/workflows/ECR-deploy-python.yml
@@ -38,7 +38,7 @@ jobs:
         pip install -r ./Python-deploy/requirements.txt
     - name: Test with pytest
       run: |
-        python ./Python-deploy/test_python_CI.py
+        pytest
 
 #     - name: Check out code
 #       uses: actions/checkout@v3
