--- a/docker/python/Dockerfile
+++ b/docker/python/Dockerfile
@@ -1,6 +1,8 @@
 
 FROM python:3.8
 
+WORKDIR /code
+
 ARG PYTHON_FILE=Python-deploy/
 
 COPY ${PYTHON_FILE}
@@ -8,3 +10,5 @@ COPY ${PYTHON_FILE}
 RUN pip install -r requirments.txt
 
 ENTRYPOINT ["python","/app.py"]
+
+
