--- a/docker/python/Dockerfile
+++ b/docker/python/Dockerfile
@@ -3,7 +3,7 @@ FROM python:3.8
 
 COPY Python-deploy/ .
 
-RUN pip install -r Python-deploy/requirements.txt .
+RUN pip install -r Python-deploy/requirements.txt
 
 ENTRYPOINT ["python","/app.py"]
 
