--- a/argopush/flask-service.yaml
+++ b/argopush/flask-service.yaml
@@ -3,14 +3,11 @@ kind: Service
 metadata:
   name: flask
 spec:
-  type: ClusterIP		# 생략 가능
-  - name: springget
+  type: ClusterIP
+  ports:
+  - name: ml
     protocol: TCP
-    targetPort: 5000
     port: 5000
-  - name: flaskget
-    protocol: TCP
-    targetPort: 8080
-    port: 8080
-  selector:				# 이 서비스가 적용될 파드 정보를 지정 (선택이나 권장 사항)
-    app: flask
+    targetPort: 5000
+  selector:
+    run: flask
