--- a/argopush/spring-service.yaml
+++ b/argopush/spring-service.yaml
@@ -1,13 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: spring
+  name: spring   
 spec:
-  selector: 
-    app: spring
   type: NodePort
+  ports:
   - name: service
     protocol: TCP
-    targetPort: 8080
-    nodePort: 32000
     port: 8080
+    targetPort: 8080
+  selector:
+    app: spring
+  
