--- a/argopush/spring-service.yaml
+++ b/argopush/spring-service.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: spring   
+  name: spring-service
 spec:
-  type: NodePort     # 서비스 타입
-  ports:
-  - port: 8080       # 서비스 포트
-    targetPort: 8080   # 타켓, 즉 pod의 포트
-    protocol: TCP
-    name: our
-  selector:
+  selector: 
     app: spring
+  type: NodePort  
+  ports:
+    - port: 8080
+      targetPort: 8080
+      nodePort: 32000
