--- a/argopush/flask.yaml
+++ b/argopush/flask.yaml
@@ -14,7 +14,7 @@ spec:
         app: flask
     spec:
       containers:
-      - name: spring
+      - name: flask
         image: 421576594835.dkr.ecr.ap-northeast-2.amazonaws.com/docker-spring:python_image
         ports:
         - containerPort: 5000
