--- a/argopush/flask-service.yaml
+++ b/argopush/flask-service.yaml
@@ -4,7 +4,7 @@ metadata:
   name: flask-service
 spec:
   selector: 
-    app: spring
+    app: flask
   type: ClusterIP  
   ports:
     - port: 5000
