--- a/docker/python/Dockerfile
+++ b/docker/python/Dockerfile
@@ -1,6 +1,13 @@
 
 FROM python:3.8
 
+RUN apt-get update
+RUN apt-get install locales
+ENV LANG ko_KR.UTF-8
+ENV LANGUAGE ko_KR.UTF-8
+RUN update-locale LANG=ko_KR.UTF-8
+
+
 COPY Python-deploy/ .
 
 RUN pip install -r requirements.txt
