--- a/argopush/flask-service.yaml
+++ b/argopush/flask-service.yaml
@@ -1,11 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: flask-service
+  name: flask
+  labels:
+    run: flask
 spec:
-  selector: 
-    app: flask
-  type: ClusterIP  
   ports:
-    - port: 5000
-      targetPort: 5000
+  - port: 5000
+    protocol: TCP
+    targetPort: 5000
+  selector:
+    run: flask
