--- a/argopush/flask-service.yaml
+++ b/argopush/flask-service.yaml
@@ -1,9 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: flask
-  labels:
-    run: flask
+  name: flask-service
 spec:
   ports:
   - port: 80
