--- a/argopush/ingress-service.yaml
+++ b/argopush/ingress-service.yaml
@@ -15,6 +15,6 @@ spec:
         path: /
         backend:
           service:
-            name: flask
+            name: flask-service
             port:
               number: 5000
