--- a/argopush/ingress-service.yaml
+++ b/argopush/ingress-service.yaml
@@ -8,8 +8,12 @@ metadata:
 
 spec:
   ingressClassName: nginx
+  tls:
+  - hosts:
+      - test.gazami.click
+    secretName: nginx  
   rules:
-  - host: "test.gazami.click"
+  - host: test.gazami.click
     http:
       paths:
       - pathType: Prefix
