--- a/argopush/ingress-service.yaml
+++ b/argopush/ingress-service.yaml
@@ -5,6 +5,7 @@ metadata:
   name: web-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
 
 spec:
   ingressClassName: nginx
