--- a/argopush/ingress-service.yaml
+++ b/argopush/ingress-service.yaml
@@ -5,7 +5,8 @@ metadata:
   name: web-ingress
   annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /
-    nginx.ingress.kubernetes.io/ssl-redirect: 443
+    nginx.ingress.kubernetes.io/force-ssl-redirect: true
+    nginx.ingress.kubernetes.io/ssl-redirect: true
 
 spec:
   ingressClassName: nginx
