--- a/argopush/ingress-service.yaml
+++ b/argopush/ingress-service.yaml
@@ -20,7 +20,7 @@ spec:
     http:
       paths:
       - pathType: Prefix
-        path: /
+        path: /test
         backend:
           service:
             name: flask-service
