--- a/argopush/ingress-service.yaml
+++ b/argopush/ingress-service.yaml
@@ -34,7 +34,7 @@ spec:
         path: /
         backend:
           service:
-            name: flask
+            name: flask-service
             port:
               number: 5000        
 
