--- a/argopush/spring-service.yaml
+++ b/argopush/spring-service.yaml
@@ -3,9 +3,9 @@ kind: Service
 metadata:
   name: spring-service
 spec:
-  type: ClusterIP
+  ports:
+  - port: 8080
+    protocol: TCP
+    targetPort: 8080
   selector:
     app: spring
-  ports:
-    - port: 8080
-      targetPort: 8080
