--- a/argopush/ingress-service.yaml
+++ b/argopush/ingress-service.yaml
@@ -23,7 +23,7 @@ spec:
         path: /
         backend:
           service:
-            name: flask-service
+            name: spring-service
             port:
-              number: 5000        
+              number: 8080        
 
