--- a/argopush/ingress-service.yaml
+++ b/argopush/ingress-service.yaml
@@ -4,7 +4,7 @@ kind: Ingress
 metadata:
   name: web-ingress
   annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /gongo
+    nginx.ingress.kubernetes.io/rewrite-target: /gongo/
 #     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 #     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 
