--- a/argopush/ingress-service.yaml
+++ b/argopush/ingress-service.yaml
@@ -8,6 +8,7 @@ metadata:
       nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
       nginx.ingress.kubernetes.io/ssl-passthrough: "true"
       nginx.ingress.kubernetes.io/app-root: /gongo
+      nginx.ingress.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:ap-northeast-2:421576594835:certificate/239e7d02-3d7e-43c8-9051-5404b2c8ac20
 
 
 spec:
