--- a/.github/workflows/ECR-deploy-spring.yml
+++ b/.github/workflows/ECR-deploy-spring.yml
@@ -70,4 +70,4 @@ jobs:
         ECR_REPOSITORY: docker-spring
         IMAGE_TAG: spring_image
       run: |
-        docker buildx build --file ./docker/spring/Dockerfile --platform linux/arm64 -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG --push --no-cache .
+        docker buildx build --file ./docker/spring/Dockerfile --platform linux/arm64 -t ghcr.io/OWNER/$IMAGE_TAG:latest: --push --no-cache .
