--- a/.github/workflows/ECR-deploy-spring.yml
+++ b/.github/workflows/ECR-deploy-spring.yml
@@ -52,8 +52,14 @@ jobs:
         cache: maven
     - name: Build with Maven
       run: mvn -B package --f ./FPBoot-deploy/pom.xml
+      
+    - name: Login to GitHub Container Registry
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ secrets.TOKEN_CONTAINER }}
 
     - name: Build, tag, and push image to Github CR
       run: |
-        cat $TOKEN_CONTAINER | docker login https://ghcr.io -u gazami99 --password-stdin
         docker buildx build --file ./docker/spring/Dockerfile --platform linux/arm64 -t ghcr.io/gazami99/$IMAGE_TAG:latest: --push --no-cache .
