--- a/FPBoot-deploy/pom.xml
+++ b/FPBoot-deploy/pom.xml
@@ -56,6 +56,11 @@
     		<version>42.5.1</version>
 		</dependency>
 		<dependency>
+    			<groupId>org.postgresql</groupId>
+    			<artifactId>postgresql</artifactId>
+    			<version>42.5.1</version>
+		</dependency>
+		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
 			<scope>runtime</scope>
