--- a/.github/workflows/ECR-deploy-spring.yml
+++ b/.github/workflows/ECR-deploy-spring.yml
@@ -24,7 +24,7 @@ jobs:
           # optional (defaults to `postgres`)
           POSTGRES_DB: final_project
           # required
-          POSTGRES_PASSWORD: postgres_password
+          POSTGRES_PASSWORD: bigdata
           # optional (defaults to `5432`)
           POSTGRES_PORT: 5432
           # optional (defaults to `postgres`)
