--- a/.github/workflows/deploy-python.yml
+++ b/.github/workflows/deploy-python.yml
@@ -1,5 +1,5 @@
 
-name: Deploy to Amazon ECR Python
+name: Deploy and push  Python image to Ghcr
 
 on:
   push:
@@ -48,13 +48,6 @@ jobs:
       
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
-    
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: ap-northeast-2
 
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v1
