--- a/argopush/spring.yaml
+++ b/argopush/spring.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: spring
+  namespace: gongo
 spec:
   replicas: 1
   selector:
@@ -18,6 +19,28 @@ spec:
         ports:
         - containerPort: 8080
         imagePullPolicy: Always
-      imagePullSecrets:
-      - name: regcred
+      env:      
+        - name: DB_USERNAME
+          valueFrom:
+            secretKeyRef:
+              name: gongo-secret
+              key: dbUserName
+              
+        - name: DB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              name: gongo-secret
+              key: dbPassword
+              
+         - name: DB_NAME
+          valueFrom:
+            secretKeyRef:
+              name: gongo-secret
+              key: databaseName
+              
+        - name: DB_HOSTNAME
+          valueFrom:
+            secretKeyRef:
+              name: gongo-secret
+              key: dbHostName
       
