--- a/argopush/flask.yaml
+++ b/argopush/flask.yaml
@@ -3,6 +3,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: flask
+  namespace: gongo
 spec:
   replicas: 1
   selector:
@@ -15,9 +16,20 @@ spec:
     spec:
       containers:
       - name: flask
-        image: 421576594835.dkr.ecr.ap-northeast-2.amazonaws.com/docker-python:python_image
+        image: ghcr.io/gazami99/flask:latest
         ports:
         - containerPort: 5000
         imagePullPolicy: Always
-      imagePullSecrets:
-      - name: regcred
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: flask-service
+  namespace: gongo
+spec:
+  ports:
+  - port: 5000
+    protocol: TCP
+    targetPort: 5000
+  selector:
+    app: flask
