--- a/argopush/route.yaml
+++ b/argopush/route.yaml
@@ -7,7 +7,7 @@ spec:
   parentRefs:
   - name: istio-gateway
     namespace: istio-gateway
-  hostnames: ["gazami.click"]
+  hostnames: ["*"]
   rules:
   - matches:
     - path:
